--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                 <h2>Wait, I have something to show you below</h2>
 
             </article>
-            <img src="./selfie.jpg" alt="myself"> 
+            <img src="./images/selfie.jpg" alt="myself"> 
 
         </section>
 
